// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`splitTwammOrderByAmountSold > various pools > one pool 1`] = `
[
  {
    "amount": "1000000000000000000",
    "fee": "1",
  },
]
`;

exports[`splitTwammOrderByAmountSold > various pools > three pools, one with 10x liquidity, maxSplits 2 1`] = `
[
  {
    "amount": "666666666482356036",
    "fee": "2",
  },
  {
    "amount": "333333333517643964",
    "fee": "3",
  },
]
`;

exports[`splitTwammOrderByAmountSold > various pools > two pools, one with 10x liquidity 1`] = `
[
  {
    "amount": "909090909022249733",
    "fee": "2",
  },
  {
    "amount": "90909090977750267",
    "fee": "1",
  },
]
`;

exports[`splitTwammOrderByAmountSold > various pools > two pools, same liquidity 1`] = `
[
  {
    "amount": "500000000000000000",
    "fee": "1",
  },
  {
    "amount": "500000000000000000",
    "fee": "2",
  },
]
`;

exports[`splitTwammOrderByAmountSold > various pools > two pools, same liquidity, different rates, maxSplits 1 1`] = `
[
  {
    "amount": "1000000000000000000",
    "fee": "1",
  },
]
`;
